--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,14 @@
 [package]
 name = "plugdecomp"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
+license = "MIT"
+license-file = "LICENSE"
+homepage = "https://github.com/radstevee/plugdecomp.git"
+repository = "https://github.com/radstevee/plugdecomp.git"
+description = "Tool for setting up Gradle workspaces for decompiled Minecraft plugins."
+keywords = ["minecraft", "plugin", "gradle", "decompiler", "decompiled", "decomp"]
+categories = ["minecraft", "plugin", "gradle"]
 
 [lib]
 name = "plugdecomp"
